# AIDEMO

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/aidemo/: __init__.py  demo.ipynb
